fixed padding on container on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,9 @@ body {
   max-width: 120rem;
   margin: auto 0;
   padding: 2em; }
+  @media only screen and (max-width: 24em) {
+    .container {
+      padding: 1em; } }
 
 .u-mb-m {
   margin-bottom: 2.5rem; }
