--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,4 +2,7 @@
   max-width: 120rem;
   margin: auto 0;
   padding: 2em;
+  @media only screen and (max-width: $bp-small) {
+    padding: 1em;
+  }
 }
